InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityTemplate__c/vlocity_ins__ActivityTemplate__c.object-meta.xml
<CustomObject>
    <description>Activity Templates define a collection of template activities to be automatically generated each time a registered object&apos;s stage changes.</description>
    <label>Activity Template</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>