InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityTemplate__c/fields/vlocity_ins__EnabledObjectsAPI__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EnabledObjectsAPI__c</fullName>
    <label>Enabled for Objects (API)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case__c</fullName>
            </value>
            <value>
                <fullName>Incident__c</fullName>
            </value>
            <value>
                <fullName>Application__c</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>