InsuranceOrg/force-app/main/default/objects/vlocity_ins__ActivityTemplate__c/fields/vlocity_ins__Publish__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>